[gd_scene load_steps=14 format=3 uid="uid://bv8kgs0ovjuyk"]

[ext_resource type="Script" path="res://game/player/player.gd" id="1_l1f46"]
[ext_resource type="PackedScene" uid="uid://bbv05e2i5giei" path="res://game/player/player_id.tscn" id="2_0l5uf"]
[ext_resource type="Material" uid="uid://cw6w2fsecaa35" path="res://assets/grids/Green/texture_02.tres" id="3_p6lko"]
[ext_resource type="Material" uid="uid://dms64ug0egyy4" path="res://assets/grids/Red/texture_02.tres" id="4_4ofpa"]
[ext_resource type="Script" path="res://addons/netfox/tick-interpolator.gd" id="4_i8n27"]
[ext_resource type="Script" path="res://game/player/player_controller.gd" id="5_7ffyq"]
[ext_resource type="Material" uid="uid://cjsbjufs8a6h7" path="res://assets/grids/Orange/texture_02.tres" id="5_vxpw3"]
[ext_resource type="Material" uid="uid://bpr3anu11g4t4" path="res://assets/grids/Light/texture_02.tres" id="6_4q0k3"]
[ext_resource type="Script" path="res://addons/netfox/state-synchronizer.gd" id="7_eqbbg"]
[ext_resource type="Material" uid="uid://7k6o3sk5f7jg" path="res://assets/grids/Dark/texture_01.tres" id="7_f6ubg"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_uwxnw"]
material = ExtResource("6_4q0k3")

[sub_resource type="BoxMesh" id="BoxMesh_f5n2x"]
material = ExtResource("7_f6ubg")
size = Vector3(0.8, 0.25, 0.3)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kwsv2"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_l1f46")
desktop_material = ExtResource("6_4q0k3")
android_material = ExtResource("3_p6lko")
ios_material = ExtResource("4_4ofpa")
web_material = ExtResource("5_vxpw3")
xr_material = ExtResource("7_f6ubg")

[node name="StateSynchronizer" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("7_eqbbg")
root = NodePath("..")
properties = Array[String]([":global_transform", ":velocity", "PitchPivot:global_transform"])

[node name="TickInterpolator" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("4_i8n27")
root = NodePath("..")
properties = Array[String]([":global_transform", "PitchPivot:global_transform"])

[node name="PlayerId" parent="." instance=ExtResource("2_0l5uf")]

[node name="Controller" type="Node" parent="." node_paths=PackedStringArray("player_id")]
script = ExtResource("5_7ffyq")
player_id = NodePath("../PlayerId")

[node name="Model" type="Node3D" parent="."]

[node name="BodyMesh" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1, 2.08165e-12)
mesh = SubResource("CapsuleMesh_uwxnw")

[node name="HeadMesh" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1.5, -0.4)
mesh = SubResource("BoxMesh_f5n2x")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1, 2.08165e-12)
shape = SubResource("CapsuleShape3D_kwsv2")

[node name="PitchPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera" type="Camera3D" parent="PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0.7, 6.4)

[node name="HeadRemoteTransform" type="RemoteTransform3D" parent="PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, -0.4)
remote_path = NodePath("../../Model/HeadMesh")
